samples/_failures_safe/1761502134_398344_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04a8490b.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_04a8490b.c:161:9: error: expected ‘:’ or ‘...’ at end of input
  161 |         case TOKEN_STRING
      |         ^~~~
./samples/SAFE/__tmp_04a8490b.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_04a8490b.c:161:9: error: expected declaration or statement at end of input
